--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting to docmd.io...</title>
+    <meta name="description" content="Generate beautiful, lightweight static documentation sites directly from your Markdown files. Zero config, zero clutter.">
+    <link rel="canonical" href="https://docmd.io/">
+    <meta property="og:title" content="The Universal Documentation Engine : docmd">
+    <meta property="og:description" content="Generate beautiful, lightweight static documentation sites directly from your Markdown files. Zero config, zero clutter.">
+    <meta property="og:url" content="https://docmd.io/">
+    <meta property="og:site_name" content="docmd">
+    <meta property="og:image" content="https://docmd.io/assets/images/preview.png">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="The Universal Documentation Engine : docmd">
+    <meta name="twitter:description" content="Generate beautiful, lightweight static documentation sites directly from your Markdown files. Zero config, zero clutter.">
+    <meta name="twitter:image" content="https://docmd.io/assets/images/preview.png">
+    <meta name="keywords" content="static site generator, documentation generator, markdown to html, nodejs ssg, docmd, open source documentation">
+    <title>The Universal Documentation Engine : docmd</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
